--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build-server": "cd server && npm install",
     "start-server": "cd server && npm start",
     "dev-server": "cd server && npm run devStart",
-    "start-client": "cd client && npm run dev"
+    "start-client": "cd client && npm run dev",
+    "start-client-network": "cd client && npm run dev-network"
   },
   "author": "Justin Carl Sagun",
   "license": "ISC",
